infrastructure/anthra-db/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anthra-db
  namespace: anthra
  labels:
    app: anthra-db
spec:
  type: ClusterIP
  selector:
    app: anthra-db
  ports:
    - name: tcp-postgres
      port: 5432
      targetPort: 5432
